--- a/IntunePackagingTool/App.xaml
+++ b/IntunePackagingTool/App.xaml
@@ -5,7 +5,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <!-- Base styles must be loaded first -->
                 <ResourceDictionary Source="/IntunePackagingTool;component/Themes/ModernTheme.xaml"/>
+                <!-- Theme will be loaded dynamically by ThemeService -->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
